[risk=low][RW-12248] rm workspace.published from API (#8752)
* rm FEATURED_WORKSPACE_ADMIN